--- a/app/assets/stylesheets/staff/_colors.scss
+++ b/app/assets/stylesheets/staff/_colors.scss
@@ -7,5 +7,5 @@ $very_light_gray: #fafafa;
 
 // シアン系
 
-$dark_chan: #448888;
-$very_dark_chan: darken($dark_chan, 25%);
+$dark_cyan: #448888;
+$very_dark_cyan: darken($dark_cyan, 25%);
