--- a/app/assets/stylesheets/staff/container.scss
+++ b/app/assets/stylesheets/staff/container.scss
@@ -8,7 +8,7 @@ div#wrapper {
             padding: $moderate*1.5 $moderate;
             font-size: $large;
             font-weight: normal;
-            background-color: $very_dark_chan;
+            background-color: $very_dark_cyan;
             color: $light_gray;
         }
     }
