--- a/app/assets/stylesheets/staff/layout.scss
+++ b/app/assets/stylesheets/staff/layout.scss
@@ -1,11 +1,12 @@
 @import "colors";
 @import "dimensions";
-
-html, body {
+html,
+body {
     margin: 0;
     padding: 0;
     height: 100%;
 }
+
 div#wrapper {
     position: relative;
     box-sizing: border-box;
@@ -14,18 +15,22 @@ div#wrapper {
     padding-bottom: ($wide + $moderate)*2+$standard_line_height;
     background-color: $gray;
 }
+
 header {
     padding: $moderate;
     background-color: $dark_cyan;
     color: $very_light_gray;
-    span.logo-mark {
+    a.logo-mark {
+        float: none;
+        text-decoration: none;
         font-weight: bold;
     }
+    a {
+        float: right;
+        color: $very_light_gray;
+    }
 }
-a {
-    float: right;
-    color: $very_light_gray;
-}
+
 footer {
     bottom: 0;
     position: absolute;
