--- a/app/assets/stylesheets/staff/tables.scss
+++ b/app/assets/stylesheets/staff/tables.scss
@@ -20,7 +20,8 @@ div.table-wrapper {
                 padding: $narrow;
             }
             td.email,
-            td.date {
+            td.date,
+            td.password {
                 font-family: monospace;
             }
             td.boolean {
