--- a/app/views/admin/staff_members/index.html.erb
+++ b/app/views/admin/staff_members/index.html.erb
@@ -18,6 +18,7 @@
             <th>アクション</th>
         </tr>
         <% @staff_members.each do |m|%>
+            <% p = StaffMemberPresenter.new(m, self) %>
             <tr>
                 <td><%= m.family_name %><%= m.given_name %></td>
                 <td><%= m.family_name_kana %><%= m.given_name_kana %></td>
@@ -25,7 +26,7 @@
                 <td class="date"><%= m.start_date.strftime("%Y/%m/%d") %></td>
                 <td class="date"><%= m.end_date.try(:strftime, "%Y/%m/%d") %></td>
                 <td class="boolean">
-                    <%= m.suspended ? raw("&#x2611;") : raw("&#x2610;") %></td>
+                    <%= p.suspended_mark %></td>
                 <td class="actions">
                     <%= link_to "編集", [ :edit, :admin, m ]%> |
                     <%= link_to "Events", [ :admin, m, :staff_events ]%> |
