--- a/app/assets/stylesheets/staff/form.scss
+++ b/app/assets/stylesheets/staff/form.scss
@@ -22,6 +22,11 @@ div#wrapper {
                         color: $red;
                     }
                 }
+                div.input-block {
+                    input {
+                        margin-right: $narrow * 2;
+                    }
+                }
                 div.notes {
                     text-align: right;
                     font-size: $small;
